--- a/.gitignore
+++ b/.gitignore
@@ -21,25 +21,37 @@ migrate_working_dir/
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
-#.vscode/
+# VS Code settings (optional)
+.vscode/
 
 # Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
 .dart_tool/
+.packages
+.pub/
+.pub-cache/
 .flutter-plugins
 .flutter-plugins-dependencies
-.pub-cache/
-.pub/
-/build/
+build/
 
-# Symbolication related
+# Android build
+android/.gradle/
+android/app/debug/
+android/app/profile/
+android/app/release/
+
+# Firebase config (auto-generated)
+lib/firebase_options.dart
+
+# iOS/macOS (if added later)
+ios/
+macos/
+.DS_Store
+
+# Logs
+*.log
+
+# Symbolication
 app.*.symbols
 
-# Obfuscation related
+# Obfuscation
 app.*.map.json
-
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
